server/compilers/goLiteJS/src/test/ml1/invalid/package6.go
// type declaration before package declaration
type num int

package main
